Fixed stickiness of collapsing reports in myreports; maps load dynamically and keep track of loaded state; toned down the colors a bit.

--- a/views/css/reportr.css
+++ b/views/css/reportr.css
@@ -5,7 +5,7 @@ html {
 body {
   /* Margin bottom by footer height */
   padding-top: 50px;
-  padding-bottom: 60px; 
+  padding-bottom: 60px;
   font-family: 'Roboto', 'sans-serif';
   height: 100%;
 }
@@ -80,7 +80,7 @@ header p
     vertical-align: middle;
 }
 
-.stat:hover { 
+.stat:hover {
     -webkit-box-shadow: 0px -5px 0px 0px rgba(247, 92, 84, 1);
     -moz-box-shadow:    0px -5px 0px 0px rgba(247, 92, 84, 1);
     box-shadow:         0px -5px 0px 0px rgba(247, 92, 84, 1);
@@ -96,7 +96,7 @@ header p
     font-size: 14px;
 }
 
-.popup {    
+.popup {
     padding: 15px;
     margin-bottom: 0px;
     border: 1px solid transparent;
@@ -112,13 +112,6 @@ header p
 .small-map-view {
     height: 250px;
     width: 100%;
-}
-
-.report:hover {
-    border-color: #66afe9;
-    outline: 0;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
 }
 
 .report .panel-heading {
